src/views/left_nav/parser/VizRepParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import VizRepListener from './VizRepListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class VizRepParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'START'", "'END'", "'MIDDLE'", "'IF('", 
                            "')'", "'THEN'", "'ELSE'", "'END IF'", "'CUBE:'", 
                            "':'", "','", "';'", "'SPHERE:'", "'PLANE:'", 
                            "'TEXT:'", "'LINE:'", "'linewidth:'", "'PEN:'", 
                            "'COLOR: fill:'", "'MAP: map:'", null, null, 
                            null, null, null, "'dashed'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, "SPHEREDIMENSIONS", 
                             "DIMENSION3D", "DIMENSION2D", "TEXTDIMDIGITS", 
                             "TEXTDIMSTRING", "PENPARAMSBOOL", "PENPARAMS", 
                             "STRING", "DIGITS", "WHITESPACE", "NEWLINE", 
                             "BOOLEANSTR", "OPERATOR" ];
    static ruleNames = [ "commandChain", "relation", "relMiddle", "condition", 
                         "ifBlock", "elseBlock", "ifCommand", "elseCommand", 
                         "command", "shapeCommand", "styleCommand", "relCommandFrom", 
                         "relCommandTo", "cube", "relCube", "ifCube", "elseCube", 
                         "sphere", "relSphere", "ifSphere", "elseSphere", 
                         "plane", "relPane", "ifPlane", "elsePlane", "text", 
                         "relText", "ifText", "elseText", "line", "ifLine", 
                         "elseLine", "pen", "ifPen", "elsePen", "color", 
                         "ifColor", "elseColor", "map", "ifMap", "elseMap" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = VizRepParser.ruleNames;
        this.literalNames = VizRepParser.literalNames;
        this.symbolicNames = VizRepParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	commandChain() {
	    let localctx = new CommandChainContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, VizRepParser.RULE_commandChain);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 86;
	        		this._errHandler.sync(this);
	        		switch(this._input.LA(1)) {
	        		case 9:
	        		case 13:
	        		case 14:
	        		case 15:
	        		case 18:
	        		case 19:
	        		case 20:
	        		    this.state = 82;
	        		    this.command();
	        		    break;
	        		case 31:
	        		    this.state = 83;
	        		    this.match(VizRepParser.NEWLINE);
	        		    break;
	        		case 16:
	        		    this.state = 84;
	        		    this.relation();
	        		    break;
	        		case 4:
	        		    this.state = 85;
	        		    this.condition();
	        		    break;
	        		default:
	        		    throw new antlr4.error.NoViableAltException(this);
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 88; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 90;
	        _la = this._input.LA(1);
	        if(!(_la===-1 || _la===31)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relation() {
	    let localctx = new RelationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, VizRepParser.RULE_relation);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.line();
	        this.state = 94;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===31) {
	            this.state = 93;
	            this.match(VizRepParser.NEWLINE);
	        }

	        this.state = 96;
	        this.match(VizRepParser.T__0);
	        this.state = 98;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===31) {
	            this.state = 97;
	            this.match(VizRepParser.NEWLINE);
	        }

	        this.state = 100;
	        this.relCommandFrom();
	        this.state = 102;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        if(la_===1) {
	            this.state = 101;
	            this.match(VizRepParser.NEWLINE);

	        }
	        this.state = 105;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 57856) !== 0)) {
	            this.state = 104;
	            this.relCommandFrom();
	        }

	        this.state = 108; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 107;
	        		this.match(VizRepParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 110; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,6, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 112;
	        this.match(VizRepParser.T__1);
	        this.state = 114; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 113;
	        		this.match(VizRepParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 116; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,7, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 118;
	        this.relCommandTo();
	        this.state = 120;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        if(la_===1) {
	            this.state = 119;
	            this.match(VizRepParser.NEWLINE);

	        }
	        this.state = 123;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        if(la_===1) {
	            this.state = 122;
	            this.relCommandTo();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relMiddle() {
	    let localctx = new RelMiddleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, VizRepParser.RULE_relMiddle);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.line();
	        this.state = 127; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 126;
	        		this.match(VizRepParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 129; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,10, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 131;
	        this.match(VizRepParser.T__0);
	        this.state = 133; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 132;
	        		this.match(VizRepParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 135; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,11, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 137;
	        this.shapeCommand();
	        this.state = 139;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 57856) !== 0)) {
	            this.state = 138;
	            this.shapeCommand();
	        }

	        this.state = 141;
	        this.match(VizRepParser.T__2);
	        this.state = 143; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 142;
	        		this.match(VizRepParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 145; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,13, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 147;
	        this.text();
	        this.state = 148;
	        this.match(VizRepParser.T__1);
	        this.state = 150; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 149;
	        		this.match(VizRepParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 152; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,14, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 154;
	        this.shapeCommand();
	        this.state = 156;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 57856) !== 0)) {
	            this.state = 155;
	            this.shapeCommand();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, VizRepParser.RULE_condition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.match(VizRepParser.T__3);
	        this.state = 159;
	        this.match(VizRepParser.DIGITS);
	        this.state = 160;
	        this.match(VizRepParser.OPERATOR);
	        this.state = 161;
	        this.match(VizRepParser.DIGITS);
	        this.state = 162;
	        this.match(VizRepParser.T__4);
	        this.state = 163;
	        this.match(VizRepParser.NEWLINE);
	        this.state = 164;
	        this.match(VizRepParser.T__5);
	        this.state = 165;
	        this.match(VizRepParser.NEWLINE);
	        this.state = 166;
	        this.ifBlock();
	        this.state = 167;
	        this.match(VizRepParser.NEWLINE);
	        this.state = 168;
	        this.match(VizRepParser.T__6);
	        this.state = 169;
	        this.elseBlock();
	        this.state = 170;
	        this.match(VizRepParser.T__7);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifBlock() {
	    let localctx = new IfBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, VizRepParser.RULE_ifBlock);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 175;
	        		this._errHandler.sync(this);
	        		switch(this._input.LA(1)) {
	        		case 9:
	        		case 13:
	        		case 14:
	        		case 15:
	        		case 18:
	        		case 19:
	        		case 20:
	        		    this.state = 172;
	        		    this.ifCommand();
	        		    break;
	        		case 16:
	        		    this.state = 173;
	        		    this.relation();
	        		    break;
	        		case 31:
	        		    this.state = 174;
	        		    this.match(VizRepParser.NEWLINE);
	        		    break;
	        		default:
	        		    throw new antlr4.error.NoViableAltException(this);
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 177; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,17, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseBlock() {
	    let localctx = new ElseBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, VizRepParser.RULE_elseBlock);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 182; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 182;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 9:
	            case 13:
	            case 14:
	            case 15:
	            case 18:
	            case 19:
	            case 20:
	                this.state = 179;
	                this.elseCommand();
	                break;
	            case 16:
	                this.state = 180;
	                this.relation();
	                break;
	            case 31:
	                this.state = 181;
	                this.match(VizRepParser.NEWLINE);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 184; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 2149442048) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifCommand() {
	    let localctx = new IfCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, VizRepParser.RULE_ifCommand);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 193;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	            this.state = 186;
	            this.ifCube();
	            break;
	        case 13:
	            this.state = 187;
	            this.ifSphere();
	            break;
	        case 14:
	            this.state = 188;
	            this.ifPlane();
	            break;
	        case 15:
	            this.state = 189;
	            this.ifText();
	            break;
	        case 19:
	            this.state = 190;
	            this.ifColor();
	            break;
	        case 20:
	            this.state = 191;
	            this.ifMap();
	            break;
	        case 18:
	            this.state = 192;
	            this.ifPen();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseCommand() {
	    let localctx = new ElseCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, VizRepParser.RULE_elseCommand);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 202;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	            this.state = 195;
	            this.elseCube();
	            break;
	        case 13:
	            this.state = 196;
	            this.elseSphere();
	            break;
	        case 14:
	            this.state = 197;
	            this.elsePlane();
	            break;
	        case 15:
	            this.state = 198;
	            this.elseText();
	            break;
	        case 19:
	            this.state = 199;
	            this.elseColor();
	            break;
	        case 20:
	            this.state = 200;
	            this.elseMap();
	            break;
	        case 18:
	            this.state = 201;
	            this.elsePen();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, VizRepParser.RULE_command);
	    try {
	        this.state = 206;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	        case 13:
	        case 14:
	        case 15:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 204;
	            this.shapeCommand();
	            break;
	        case 18:
	        case 19:
	        case 20:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 205;
	            this.styleCommand();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	shapeCommand() {
	    let localctx = new ShapeCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, VizRepParser.RULE_shapeCommand);
	    try {
	        this.state = 212;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 208;
	            this.cube();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 209;
	            this.sphere();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 210;
	            this.plane();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 211;
	            this.text();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	styleCommand() {
	    let localctx = new StyleCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, VizRepParser.RULE_styleCommand);
	    try {
	        this.state = 217;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 214;
	            this.color();
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 215;
	            this.map();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 216;
	            this.pen();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relCommandFrom() {
	    let localctx = new RelCommandFromContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, VizRepParser.RULE_relCommandFrom);
	    try {
	        this.state = 223;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 219;
	            this.relCube();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 220;
	            this.relSphere();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 221;
	            this.plane();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 222;
	            this.relText();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relCommandTo() {
	    let localctx = new RelCommandToContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, VizRepParser.RULE_relCommandTo);
	    try {
	        this.state = 229;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 225;
	            this.relCube();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 226;
	            this.relSphere();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 227;
	            this.relPane();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 228;
	            this.relText();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cube() {
	    let localctx = new CubeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, VizRepParser.RULE_cube);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 231;
	        this.match(VizRepParser.T__8);
	        this.state = 232;
	        this.match(VizRepParser.DIMENSION3D);
	        this.state = 233;
	        this.match(VizRepParser.T__9);
	        this.state = 234;
	        this.match(VizRepParser.DIGITS);
	        this.state = 235;
	        this.match(VizRepParser.T__10);
	        this.state = 236;
	        this.match(VizRepParser.DIMENSION3D);
	        this.state = 237;
	        this.match(VizRepParser.T__9);
	        this.state = 238;
	        this.match(VizRepParser.DIGITS);
	        this.state = 239;
	        this.match(VizRepParser.T__10);
	        this.state = 240;
	        this.match(VizRepParser.DIMENSION3D);
	        this.state = 241;
	        this.match(VizRepParser.T__9);
	        this.state = 242;
	        this.match(VizRepParser.DIGITS);
	        this.state = 243;
	        this.match(VizRepParser.T__11);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


